2003-11-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml,
	  printer/HP-LaserJet_1015.xml: Updated text and rating of the
	  LaserJet 101x series as they do not work reliably as PCL-5e
	  printers.

2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Updated "Dependencies" section.

	* USAGE: Fixed typo.

	* *: Tagged all files of the repository with "foomatic-3_0-bp",
	  started stable branch "foomatic-3_0-branch".
	
2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/93.xml, opt/eplXXXX-NumCopies.xml, opt/foo2zjs-Copies.xml,
	  gdi-Copies.xml: Reduced maximum amount of copies from 999 to
	  100, as the Adobe PostScript driver for Windows crashes on an
	  option with 999 choices in the PPD file. See

	  http://www.cups.org/newsgroups.php?s2623+gcups.general+v2632

2003-10-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-AcuLaser_C1000.xml: Updated text.

	* driver/lj4dith.xml, driver/ljet4, opt/6.xml: The Epson AcuLaser
	  C4000 also understands PCL 5e, added it to "ljet4" and
	  "lj4dith".

	* printer/Epson-AcuLaser_C900.xml,
	  printer/Epson-AcuLaser_C1900.xml,
	  printer/Epson-AcuLaser_C1900PS.xml, driver/Postscript.xml,
	  driver/lj4dith.xml, driver/ljet4.xml, opt/159.xml, opt/6.xml,
	  opt/Postscript-Resolution.xml,
	  opt/pxlmono-PrinterResolution.xml: Added Epson AcuLaser C900 and
	  C1900.

	* printer/Epson-EPL-N2750, driver/epl2750.xml, driver/alc1900.xml,
	  opt/145.xml, opt/159.xml, opt/2.xml, opt/eplXXXX-Collate.xml,
	  opt/eplXXXX-Duplex.xml, opt/eplXXXX-FaceUp.xml,
	  opt/eplXXXX-InputSlot.xml, opt/eplXXXX-Landscape.xml,
	  opt/eplXXXX-MediaType.xml, opt/eplXXXX-NumCopies.xml,
	  opt/eplXXXX-RITOff.xml, opt/eplXXXX-TonerSaving.xml: Added new
	  driver entries for the Epson Kowa laser printer driver version
	  3.1.1.

	* printer/Epson-Stylus_C63.xml, printer/Epson-Stylus_C64.xml,
	  printer/Epson-PX_V500.xml, printer/Epson-Stylus_CX6400.xml,