@@ -23,7 +23,7 @@
   <autodetect>
   </autodetect>
   <functionality>B</functionality>
-  <driver>gimp-print-ijs</driver>
+  <driver>bjc600</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
