@@ -34,11 +34,10 @@
     The printing engine is the one of the Epson Stylus C64, see that
     printer entry for more info.&lt;p&gt;
 
-    Scanning should work as described for the Epson Stylus CX3200 and
-    CX5200. Unfortunately, noone confirmed yet whether the scanning
-    engine of this model is supported by &lt;a
-    href="http://www.sane-project.org/"&gt;SANE&lt;/a&gt;, therefore
-    this printer is listed as "Partially" working for now.&lt;p&gt;
+    Scanning seems not to work with the "epson" backend of &lt;a
+    href="http://www.sane-project.org/"&gt;SANE&lt;/a&gt;, so up to
+    now this device does not scan with free software. Therefore this
+    printer is listed as "Partially" working for now.&lt;p&gt;
 
     Copying should just work with the front panel of the
     device.&lt;p&gt;
