@@ -5,6 +5,11 @@
 	  LaserJet 101x series as they do not work reliably as PCL-5e
 	  printers.
 
+	* printer/Canon-S100.xml: Changed recommended driver to "bjc600",
+	  this printer does not work correctly with GIMP-Print.
+
+	* printer/Epson-Stylus_CX6400.xml: Updated text.
+
 2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* README: Updated "Dependencies" section.
